<resources>
    <string name="app_name">DocTab</string>


    <string name="nom_consul">Nombre del consultorio</string>
    <string name="calle_consul">Calle</string>
    <string name="num_ext_consul"># Exterior</string>
    <string name="num_int_consul"># Interior</string>
    <string name="colonia_consul">Colonia</string>
    <string name="cp_consul">Código Postal</string>
    <string name="tel_consul">Teléfono</string>
    <string name="extension_consul">Extensión</string>
    <string name="tel2_consul">Telefono 2</string>
    <string name="extension2_consul">Extensión 2</string>
    <string name="horario_consul">Horario de atención</string>

    <string name="dia0">Lunes</string>
    <string name="dia1">Martes</string>
    <string name="dia2">Miércoles</string>
    <string name="dia3">Jueves</string>
    <string name="dia4">Viernes</string>
    <string name="dia5">Sábado</string>
    <string name="dia6">Domingo</string>

    <string name="hint_names">Nombre(s)</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Contraseña demasiado corta, ingresa minimo 6 caracteres!</string>
    <string name="auth_failed">Authentication fallida, verifica tu correo electronico and contraseña.</string>
    <string name="change_email">Cambiar correo electronico</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="send_password_reset_email">Enviar reinicio de contrasela al correo electronico</string>
    <string name="remove_user">Borrar usuario</string>
    <string name="new_pass">Nueva contraseña</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Iniciar Sessión</string>
    <string name="hint_email">Correo Electronico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_name">Nombre completo</string>
    <string name="btn_login">Iniciar Sessión</string>
    <string name="btn_link_to_register">¿No eres miembro? ¡Registrate ahora!</string>
    <string name="btn_link_to_login">¿Estas registrado?. ¡Iniciar Sessión!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="btn_reset_password">Reiniciar contraseña</string>
    <string name="btn_back"><![CDATA[<< Regresar]]></string>
    <string name="hint_new_email">Nuevo correo electronico</string>
    <string name="btn_change">Cambiar</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_remove">Borrar</string>
    <string name="btn_sign_out">Cerrar sessión</string>
    <string name="lbl_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="forgot_password_msg">Enviaremos un correo electronico con las instruccions para reinciar contraseña.</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="title_activity_register">MainRegisterActivity</string>

    <string name="sexo">Sexo</string>
    <string-array name="sexos">
        <item>Seleccione ...</item>
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>


    <!--Horas-->
    <string-array name="horas">
        <item>6:00</item>
        <item>7:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>

    <string-array name="cantidad_citas">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Opciones</string>
    <string name="action_soporte">Soporte</string>
    <string name="action_logout">Cerrar Sessión</string>

    <!--Opciones del menu-->
    <string name="default_item_menu_title_inicio">Inicio</string>
    <string name="default_item_menu_title_citas_doctor">Citas</string>
    <string name="default_item_menu_title_mensajes_doctor">Mensajes</string>
    <string name="default_item_menu_title_consultorios_doctor">Mi Dirección</string><!--Mis Consultorios -->
    <string name="default_item_menu_title_perfil_doctor">Mi Perfil</string>
    <string name="default_item_menu_title_citas_paciente">Citas</string>
    <string name="default_item_menu_title_mensajes_paciente">Mensajes</string>
    <string name="default_item_menu_title_perfil_paciente">Mi Perfil</string>
    <string name="default_item_menu_title_perfil_de_doctor">Perfil de Doctor</string>
    <string name="default_item_menu_title_pacientes_doctor">Mis Pacientes</string>
    <string name="default_item_menu_title_horarios_servicio">Mi horario</string>


    <!--Form subtitle-->
    <string name="default_form_title_edit">Modificar</string>
    <string name="default_form_title_new">Agregar</string>

    <!--Titulos de la actividad-->
    <string name="default_activity_title_usuarios">Usuarios</string>
    <string name="default_activity_title_aretes_internos">Aretes Internos</string>
    <string name="default_activity_title_cabezas">Cabezas</string>
    <!--
    <string name="default_title_activity_consultorios">Consultorios</string>
    -->
    <string name="default_title_activity_consultorios">Mi Dirección</string>
    <string name="default_title_activity_citas_doctor">Mis citas</string>
    <string name="default_title_activity_horarios_de_atencion">Mi horario</string>
    <string name="default_title_activity_doctores">Mis Datos</string>

    <string name="default_loading_msg">Por favor espera un momento</string>
    <string name="default_alert_dialog_aceptar">Aceptar</string>
    <string name="default_alert_dialog_cancelar">Cancelar</string>
    <string name="default_alert_dialog_si">Si</string>
    <string name="default_alert_dialog_no">No</string>
    <string name="title_activity_maps">Map</string>
    <string name="hint_correo">Correo</string>
    <string name="hint_registrar">Registrar</string>
    <string name="hint_logueate">O haz click para loguearte</string>
    <string name="direccion">Dirección</string>
    <string name="contacto">Contacto</string>
    <string name="especialidad">Especialidad</string>
    <string name="subespecialidad">Subespecialidad</string>
    <string name="cedula">Cédula Profesional</string>
    <string name="universidad">Universidad</string>
    <string name="egreso">Año de egreso</string>

    <!--Nombres para los formularios-->

    <!--titulos de los formularios-->
    <string name="form_title_consultorio">Información de Consultorio</string>
    <string name="form_title_especialidades">Información de Especialidades</string>
    <string name="form_title_doctor">Informacion del Doctor</string>
    <string name="form_title_paciente">Informacion del Paciente</string>
    <string name="form_title_mensajes">Redactar mensaje</string>
    <string name="form_title_cita_paciente">Informacion de la Cita</string>

    <string name="form_nombre_consultorio">Nombre Consultorio</string>
    <string name="form_num_consultorio"># Consultorio</string>
    <string name="form_calle">Calle</string>
    <string name="form_num_int"># Interior</string>
    <string name="form_num_ext"># Exterior</string>
    <string name="form_cruzamientos">Cruzamientos</string>
    <string name="form_colonia">Colonia</string>
    <string name="form_cp">Codigo Postal</string>
    <string name="form_municipio">Municipio</string>
    <string name="form_estado">Estado</string>
    <string name="form_telefono_personal">Número de celular</string>

    <string name="form_telefono_uno">Telefono #1</string>
    <string name="form_telefono_dos">Telefono #2</string>
    <string name="form_tel_ext_uno">Extension #1</string>
    <string name="form_tel_ext_dos">Estension #2</string>
    <string name="citas_doctor">AGENDAR CITA</string>
    <!--
    <string name="new_consultorio">AGREGAR CONSULTORIO</string>
    -->
    <string name="new_consultorio">AGREGAR DIRECCION</string>
    <string name="new_especialidad">AGREGAR ESPECIALIDAD</string>
    <string name="new_paciente">REGISTRAR PACIENTE</string>
    <string name="new_horario_servicio">Agregar Horario</string>
    <string name="new_agendar_cita">Agendar Cita</string>
    <string name="new_servicio">AGREGAR SERVICIO</string>
    <string name="new_doctor">Agregar doctor</string>
    <string name="form_tittle_servicios">Informacion de servicios</string>
    <string name="form_subtittle_servicios">Los costos de cada servicio pueden estar ocultos al paciente</string>
    <string name="form_servicio">Servicio</string>
    <string name="form_costo">Costo</string>
    <string name="button_editar">Editar</string>
    <string name="button_eliminar">Eliminar</string>
    <string name="form_alergia">Alergico a</string>
    <string name="edad">Edad</string>
    <string name="button_responder">Responder</string>

    <string name="form_telefono">Telefono</string>
    <string name="form_asunto">Asunto</string>
    <string name="dato_cita_hora">Hora de la cita:</string>
    <string name="dato_cita_fecha">Fecha de la cita:</string>
    <string name="dato_cita_doctor">Doctor:</string>
    <string name="btn_agendar">Agendar</string>
    <string name="title_view_horario">Horario</string>


    <string name="hora_entrada">Hora de entrada:</string>
    <string name="hora_salida">Hora de salida:</string>
    <string name="citas_x_hora">Citas por hora:</string>
    <string name="default_undefined">Indefinido</string>
    <string name="default_doctor">Doctor</string>
    <string name="default_paciente">Paciente</string>

    <string name="dia_0">D</string>
    <string name="dia_1">L</string>
    <string name="dia_2">M</string>
    <string name="dia_3">M</string>
    <string name="dia_4">J</string>
    <string name="dia_5">V</string>
    <string name="dia_6">S</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
