<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="Hora de Entrada:"
            android:textSize="22dp" />


        <TextView
            android:id="@+id/tv_agregar_hora_entrada"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="monospace"
            android:text="07:00 AM"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="Hora de Salida:"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/tv_agregar_hora_salida"
            android:layout_width="match_parent"
            android:fontFamily="monospace"
            android:layout_height="match_parent"
            android:text="06:00 PM"
            android:textAlignment="center"
            android:textSize="36sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="155dp"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tgBtn_dia_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/dia_0"
            android:textOn="@string/dia_0" />

        <ToggleButton
            android:id="@+id/tgBtn_dia_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/dia_1"
            android:textOn="@string/dia_1" />

        <ToggleButton
            android:id="@+id/tgBtn_dia_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/dia_2"
            android:textOn="@string/dia_2" />

        <ToggleButton
            android:id="@+id/tgBtn_dia_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/dia_3"
            android:textOn="@string/dia_3" />

        <ToggleButton
            android:id="@+id/tgBtn_dia_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/dia_4"
            android:textOn="@string/dia_4" />

        <ToggleButton
            android:id="@+id/tgBtn_dia_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/dia_5"
            android:textOn="@string/dia_5" />

        <ToggleButton
            android:id="@+id/tgBtn_dia_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/dia_6"
            android:textOn="@string/dia_6" />

    </LinearLayout>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/lista_15m"/>
    </LinearLayout>


</FrameLayout>