<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--Fragmento para agregar pacientes del doctor-->
    <FrameLayout
        android:id="@+id/item_pacientes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:background="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txt_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/form_title_paciente"
                android:textAlignment="center"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_nombre_paciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:hint="@string/hint_names" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_apellidos_paciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:hint="@string/hint_apellidos" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/sexos"
                android:prompt="@string/sexo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_edad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:hint="@string/edad" />
            </android.support.design.widget.TextInputLayout>

            <!--
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_alergias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:hint="@string/form_alergia" />
            </android.support.design.widget.TextInputLayout>
            -->


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_paciente_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:hint="@string/form_telefono" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/form_pacientes_cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/bootstrap_brand_danger"
                    android:fontFamily="monospace"

                    android:text="@string/default_alert_dialog_cancelar"
                    android:textColor="@color/bootstrap_brand_secondary_fill" />

                <Button
                    android:id="@+id/form_pacientes_registro"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/bootstrap_brand_primary"
                    android:fontFamily="monospace"
                    android:text="@string/hint_registrar"
                    android:textColor="@color/bootstrap_brand_secondary_fill" />




            </LinearLayout>


        </LinearLayout>

    </FrameLayout>

</FrameLayout>